[package]
name = "pflag"
description = "A crate implementing POSIX/GNU-style --flags."
version = "0.4.0"
keywords = ["command-line", "flags", "args"]
categories = ["command-line-interface"]
authors = ["z5labs"]
homepage = "https://github.com/z5labs/pflag"
repository = "https://github.com/z5labs/pflag"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concat-idents = "1.0"
paste = "1.0"
